# NITRAG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: env.prod.example  local_ollama.json  medical_precise.json  openai_cloud.json
mlserve/consumers/: base.py  chunk_consumer.py  embed_consumer.py  llm_consumer.py  paddleocr_consumer.py
mlserve/scripts/: deploy_6kpro.sh  deploy_mlcpu.sh  deploy_nitrag_prod.sh  update.sh
mlserve/systemd/: nitrag-chunk.service  nitrag-embed.service  nitrag-llm.service  nitrag-ocr.service  nitrag-server.service  nsqadmin.service  nsqd.service  nsqlookupd.service
nitrag/: __init__.py  chunk_manager.py  chunk_metadata_enricher.py  chunk_metadata_enrichment_evaluation.py  chunking_evaluation.py  clinical_metadata_extractor.py  config.py  context_assembler.py  document_metadata_extractor.py  embedding_manager.py  final_evaluation.py  generation_evaluation.py  generation_manager.py  google_vision_ocr.py  index_manager.py  indexing_evaluation.py  pdf_ingestion.py  query_manager.py  rag_diagnostics_manager.py  rag_pipeline.py  reranker_manager.py  reranking_evaluation.py  retrieval_evaluation.py  retriever_manager.py  semantic_retrievers.py  server.py  vector_index_manager.py
nitrag/ui/: index.html
scripts/: ingest_pdf.py  run_pipeline.py  start_server.py
tests/: conftest.py  test_config.py  test_evaluation_managers.py  test_generation_evaluation.py  test_generation_manager.py  test_helpers.py  test_highlight_pipeline.py  test_index_strategies.py  test_ocr_chunking_pipeline.py  test_query_manager.py  test_reranker_strategies.py  test_retriever_strategies.py  test_semantic_retrievers.py  test_server.py
