[project]
name = "nitrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pymupdf>=1.27.2.3",
    "tiktoken>=0.13.0",
    # Embedding — ONNX-based, no PyTorch required
    "fastembed>=0.4.0",
    # Vector indexing
    "faiss-cpu>=1.8.0",
    # LLM — universal adapter (OpenAI, Ollama, vLLM, LMStudio, Groq, …)
    "openai>=1.40.0",
    # Web UI server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    # OCR — Google Cloud Vision (scanned PDF support)
    "google-cloud-vision>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# pip install nitrag[anthropic] — Anthropic Claude provider
anthropic = ["anthropic>=0.34.0"]
# pip install nitrag[sentence-transformers] — HuggingFace model support
sentence-transformers = ["sentence-transformers>=3.0", "torch>=2.0"]
# pip install nitrag[qdrant] — Qdrant vector database backend
qdrant = ["qdrant-client>=1.9"]

[tool.setuptools.packages.find]
include = ["nitrag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nitrag"]
omit = ["tests/*"]
